--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <title>Résumé</title>
 
+    <link rel="shortcut icon" href="./assets/img/favicon/favicon.ico">
+
     <!-- Noto Sans KR-Hestia -->
     <link rel="stylesheet" href="./assets/noto-fonts/stylesheets/NotoSansKR-Hestia.css">
 
@@ -14,8 +16,8 @@
     <link href="./assets/bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- custom css -->
-    <link href="./assets//css/common.css" rel="stylesheet">
-    <link href="./assets//css/style.css" rel="stylesheet">
+    <link href="./assets/css/common.css" rel="stylesheet">
+    <link href="./assets/css/style.css" rel="stylesheet">
 
     <!-- IE8 에서 HTML5 요소와 미디어 쿼리를 위한 HTML5 shim 와 Respond.js -->
     <!-- WARNING: Respond.js 는 당신이 file:// 을 통해 페이지를 볼 때는 동작하지 않습니다. -->
@@ -38,19 +40,19 @@
         <div class="contact-container">
           <ul class="contact-list">
             <li>
-              <a href="tel:010-0000-0000">+82. 010. 0000. 0000</a>
+              <a href="tel:01066110648">+82. 010. 6611. 0648</a>
               <span><i class="fa fa-mobile" aria-hidden="true"></i></span>
             </li>
             <li>
-              <a href="mailto:test@email.com">test@email.com</a>
+              <a href="mailto:dhpark0648@gmail.com">dhpark0648@gmail.com</a>
               <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
             </li>
             <li>
-              <a href="#" target="_blank">your homepage</a>
+              <a href="https://dhparkdh.github.io/" target="_blank">https://dhparkdh.github.io/</a>
               <span><i class="fa fa-globe" aria-hidden="true"></i></span>
             </li>
             <li>
-              <a href="#" target="_blank">your github</a>
+              <a href="https://github.com/dhparkdh/" target="_blank">https://github.com/dhparkdh/</a>
               <span><i class="fa fa-github" aria-hidden="true"></i></span>
             </li>
           </ul>
@@ -59,8 +61,7 @@
 
       <!-- main -->
       <section id="main">
-        <div class="side-bar"></div>
-        <div class="main-bar">
+        <div class="resume-item-wrapper">
 
           <!-- experince -->
           <section class="resume-item experience">
@@ -68,22 +69,30 @@
               <h2>experience</h2>
               <ul>
                 <li>
-                  <h3>Chief Technology Officer</h3>
-                  <h4 class="company">Global Unicorn Corp. in Bundang</h4>
-                  <span class="date">2016 - present</span>
-                  <p class="detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                  <h3>Startup Internship</h3>
+                  <h4 class="company">Venture Organization in Guro Digital Complex</h4>
+                  <span class="date">Sept 2015 - June 2016</span>
+                  <p class="detail">
+                    벤처 협회에서 주관하는 창업 인턴쉽 프로그램에 선정<br>
+                    플랫폼 어플리케이션 데이터베이스 설계 및 API 구축 담당
+                  </p>
                 </li>
                 <li>
-                  <h3>Senoir Web Developer</h3>
-                  <h4 class="company">Great Startup Corp. in Gangnam</h4>
-                  <span class="date">2014 - 2016</span>
-                  <p class="detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                  <h3>Junior Front-End Developer</h3>
+                  <h4 class="company">v-logue Web Agency in Hongdae</h4>
+                  <span class="date">Feb 2015 - Jan 2016</span>
+                  <p class="detail">
+                    웹 에이전시에서 프론트엔드 개발자로 근무<br>
+                    프론트엔드를 주력으로 웹 어플리케이션 제작 및 유지 보수 담당
+                  </p>
                 </li>
                 <li>
-                  <h3>Junir Front-End Developer</h3>
-                  <h4 class="company">ABC Web Agency in Hongdae</h4>
-                  <span class="date">2010 - 2014</span>
-                  <p class="detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                  <h3>Student of Computer Science</h3>
+                  <h4 class="company">University of Inha in Incheon</h4>
+                  <span class="date">Mar 2010 - present</span>
+                  <p class="detail">
+                    컴퓨터정보공학부 3학년 휴학 중
+                  </p>
                 </li>
               </ul>
             </div>
@@ -92,22 +101,21 @@
           <!-- project -->
           <section class="resume-item project">
             <div class="inner">
-              <h2>Project</h2>
+              <h2>project</h2>
               <ul>
                 <li>
-                  <h3><a href="#" target="_blank">Project</a></h3>
-                  <p class="detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                  <p class="tags">#HTML5 #CSS3</p>
+                  <h3><a href="https://github.com/dhparkdh/resume-for-web-developer" target="_blank">HTML5 Résumé template for web developer</a></h3>
+                  <p class="detail">
+                    Online Résumé(CV) template for web developer using HTML5 and CSS3.
+                  </p>
+                  <p class="tags">#HTML5 #CSS3 #Noto</p>
                 </li>
                 <li>
-                  <h3><a href="#" target="_blank">Project</a></h3>
-                  <p class="detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                  <p class="tags">#HTML5 #CSS3</p>
-                </li>
-                <li>
-                  <h3><a href="#" target="_blank">Project</a></h3>
-                  <p class="detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                  <p class="tags">#HTML5 #CSS3</p>
+                  <h3><a href="#" target="_blank">Portfolio theme for web developer</a></h3>
+                  <p class="detail">
+                    Online Portfolio template for web developer using bootstrap framework(preparing).
+                  </p>
+                  <p class="tags">#HTML5 #CSS3 #Javascript #Bootstrap</p>
                 </li>
               </ul>
             </div>
