--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
       <!-- header -->
       <header>
         <h1 class="heading-container">Résumé</h1>
-        <h2 class="name-container">dhpark</h2>
-        <h3 class="job-container">Web Developer</h3>
+        <h2 class="name-container">your name</h2>
+        <h3 class="job-container">your role</h3>
         <div class="profile-picture">
-          <img src="./assets/img/profile.png" alt="profile picture">
+          <img src="./assets/img/profile.png" alt="">
         </div>
         <div class="contact-container">
           <ul class="contact-list">
             <li>
-              <a href="tel:01066110648">+82. 010. 6611. 0648</a>
-              <span><i class="fa fa-mobile" aria-hidden="true"></i></span>
+              <a href="tel:01000000000">+82. 010. 0000. 0000</a>
+              <span><i class="fa fa-phone" aria-hidden="true"></i></span>
             </li>
             <li>
-              <a href="mailto:dhpark0648@gmail.com">dhpark0648@gmail.com</a>
+              <a href="mailto:your@email.com">your@email.com</a>
               <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
             </li>
             <li>
-              <a href="https://dhparkdh.github.io/" target="_blank">https://dhparkdh.github.io/</a>
+              <a href="#" target="_blank">your homepage address</a>
               <span><i class="fa fa-globe" aria-hidden="true"></i></span>
             </li>
             <li>
-              <a href="https://github.com/dhparkdh/" target="_blank">https://github.com/dhparkdh/</a>
+              <a href="https://github.com/dhparkdh/resume-for-web-developer" target="_blank">your github address</a>
               <span><i class="fa fa-github" aria-hidden="true"></i></span>
             </li>
           </ul>
@@ -68,30 +68,38 @@
             <div class="inner">
               <h2>experience</h2>
               <ul>
+                <!-- list example
                 <li>
-                  <h3>Startup Internship</h3>
-                  <h4 class="company">Venture Organization in Guro Digital Complex</h4>
-                  <span class="date">Sept 2015 - June 2016</span>
+                  <h3>Your Role</h3>
+                  <h4 class="company">Your Company Name & Location</h4>
+                  <span class="date">Working Period</span>
                   <p class="detail">
-                    벤처 협회에서 주관하는 창업 인턴쉽 프로그램에 선정<br>
-                    플랫폼 어플리케이션 데이터베이스 설계 및 API 구축 담당
+                    Details what you did at this company
+                  </p>
+                </li>
+                -->
+                <li>
+                  <h3>Chief Technology Officer</h3>
+                  <h4 class="company">Global Unicorn Corp. in Bundang</h4>
+                  <span class="date">Sept 2015 - present</span>
+                  <p class="detail">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                  </p>
+                </li>
+                <li>
+                  <h3>Senior Front-End Developer</h3>
+                  <h4 class="company">Awesome Startup Corp. in Gangnam</h4>
+                  <span class="date">Feb 2015 - Jan 2016</span>
+                  <p class="detail">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                   </p>
                 </li>
                 <li>
                   <h3>Junior Front-End Developer</h3>
-                  <h4 class="company">v-logue Web Agency in Hongdae</h4>
-                  <span class="date">Feb 2015 - Jan 2016</span>
+                  <h4 class="company">Great Web Agency in Hongdae</h4>
+                  <span class="date">Mar 2010 - Jan 2015</span>
                   <p class="detail">
-                    웹 에이전시에서 프론트엔드 개발자로 근무<br>
-                    프론트엔드를 주력으로 웹 어플리케이션 제작 및 유지 보수 담당
-                  </p>
-                </li>
-                <li>
-                  <h3>Student of Computer Science</h3>
-                  <h4 class="company">University of Inha in Incheon</h4>
-                  <span class="date">Mar 2010 - present</span>
-                  <p class="detail">
-                    컴퓨터정보공학부 3학년 휴학 중
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                   </p>
                 </li>
               </ul>
@@ -103,6 +111,15 @@
             <div class="inner">
               <h2>project</h2>
               <ul>
+                <!-- list example
+                <li>
+                  <h3><a href="#" target="_blank">Your Project Name</a></h3>
+                  <p class="detail">
+                    Details what the project is
+                  </p>
+                  <p class="tags">#hash #tags</p>
+                </li>
+                -->
                 <li>
                   <h3><a href="https://github.com/dhparkdh/resume-for-web-developer" target="_blank">HTML5 Résumé template for web developer</a></h3>
                   <p class="detail">
@@ -111,11 +128,18 @@
                   <p class="tags">#HTML5 #CSS3 #Noto</p>
                 </li>
                 <li>
-                  <h3><a href="#" target="_blank">Portfolio theme for web developer</a></h3>
+                  <h3><a href="#" target="_blank">Project Name</a></h3>
                   <p class="detail">
-                    Online Portfolio template for web developer using bootstrap framework(preparing).
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                   </p>
-                  <p class="tags">#HTML5 #CSS3 #Javascript #Bootstrap</p>
+                  <p class="tags">#hash #tags</p>
+                </li>
+                <li>
+                  <h3><a href="#" target="_blank">Project Name</a></h3>
+                  <p class="detail">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                  </p>
+                  <p class="tags">#hash #tags</p>
                 </li>
               </ul>
             </div>
@@ -126,34 +150,42 @@
             <div class="inner">
               <h2>Skill</h2>
               <ul>
+                <!-- list example
                 <li>
-                  <h3>HTML5 & CSS3</h3>
+                  <h3>Your Skill Name</h3>
                   <div class="skill-bar">
-                    <span class="bar" style="width: 90% ;"></span>
+                    <span class="bar" style="width: Percentage% ;"></span>
+                  </div>
+                </li>
+                -->
+                <li>
+                  <h3>Master</h3>
+                  <div class="skill-bar">
+                    <span class="bar" style="width: 100% ;"></span>
                   </div>
                 </li>
                 <li>
-                  <h3>Javascript & Jquery</h3>
-                  <div class="skill-bar">
-                    <span class="bar" style="width: 90% ;"></span>
-                  </div>
-                </li>
-                <li>
-                  <h3>Bootstrap</h3>
+                  <h3>Professional</h3>
                   <div class="skill-bar">
                     <span class="bar" style="width: 80% ;"></span>
                   </div>
                 </li>
                 <li>
-                  <h3>Node</h3>
+                  <h3>Senior</h3>
                   <div class="skill-bar">
-                    <span class="bar" style="width: 75% ;"></span>
+                    <span class="bar" style="width: 60% ;"></span>
                   </div>
                 </li>
                 <li>
-                  <h3>Linux</h3>
+                  <h3>Junior</h3>
                   <div class="skill-bar">
-                    <span class="bar" style="width: 60% ;"></span>
+                    <span class="bar" style="width: 40% ;"></span>
+                  </div>
+                </li>
+                <li>
+                  <h3>Rookie</h3>
+                  <div class="skill-bar">
+                    <span class="bar" style="width: 20% ;"></span>
                   </div>
                 </li>
               </ul>
